# AI_Assignment_01

./: .gitignore  COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  LICENSE  api.py  architecture.py  comparison.py  dhaka_fullmap.py  evaluation.py  graph_utils.py  heuristic.py  main.py  map_loader.py  metrics.py  models.py  pyproject.toml  scenario_analysis.py  state_tree.py  visualization.py
algorithms/: __init__.py  astar.py  best_first.py  bfs.py  bidirectional_astar.py  dfs.py  dls.py  greedy.py  idastar.py  ids.py  ucs.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: Charts.tsx  MapView.tsx  ResultsTable.tsx  WeightControls.tsx
specs/ai-pathfinding/: design.md  problem_statement.md  requirements.md  tasks.md
