[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["fayek2025 <fayekahmedrahat90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14.1 || >3.14.1,<4.0"
networkx = ">=3.6.1,<4.0.0"
fastapi = ">=0.136.0,<0.137.0"
uvicorn = ">=0.44.0,<0.45.0"
scipy = ">=1.17.1,<2.0.0"
contextily = ">=1.7.0,<2.0.0"
[tool.poetry.group.dev.dependencies]
osmnx = "^2.1.0"
matplotlib = "^3.10.8"
scikit-learn = "^1.8.0"
hypothesis = "^6.0"
pytest = "^8.0"
folium = "^0.20.0"
plotly = "^6.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
